--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,14 +41,14 @@ android {
 
 dependencies {
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
-//    implementation project(path: ':degpeg-video-call-sdk')
-    implementation 'com.github.degpeg-media:degpeg-video-call-sdk:1.0.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation project(path: ':degpeg-video-call-sdk')
+//    implementation 'com.github.degpeg-media:degpeg-video-call-sdk:1.0.2'
 
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.6.0'
+    implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
