--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation project(path: ':degpeg-video-call-sdk')
-//    implementation 'com.github.degpeg-media:degpeg-video-call-sdk:1.0.2'
+//    implementation project(path: ':degpeg-video-call-sdk')
+    implementation 'com.github.degpeg-media:degpeg-video-call-sdk:1.0.3'
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.0'
